# naan_model

./: README.md  generate_artifacts.py  pyproject.toml
docs/private/: index.html  schema.json  schema.md
docs/public/: index.html  schema.md
naan_model/: __init__.py  generate_docs.py
schema/private/: schema.json  schema.md
schema/public/: schema.json  schema.md
tests/: test_model.py
